--- a/library.properties
+++ b/library.properties
@@ -4,6 +4,6 @@ author=demoncey
 maintainer=demoncey <demoncey@gmail.com>
 sentence=Supervisor library for Arduino
 paragraph=Supervisor library for Arduino
-category=Unrecognized
+category=Uncategorized
 url=https://github.com/demoncey/supervisor
 architectures=*
